<?xml version="1.0"?>
<package>
  <name>husky_tutorials</name>
  <version>0.2.0</version>
  <description>Clearpath Husky controller configurations</description>

  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>

  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/husky_control</url>
  <url type="bugtracker">https://github.com/husky/husky_control/issues</url>
  <url type="repository">https://github.com/husly/husky_control</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>cmake_modules</build_depend>

  <export>
  </export>
</package>
