<?xml version="1.0"?>
<package>
  <name>husky_tutorials</name>
  <version>0.2.0</version>
  <description>Husky tutorials that demonstrate the Husky's capabilities</description>

  <author email="dash@clearpathrobotics.com">Devon Ash</author>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>cmake_modules</build_depend>

  <export>
  </export>
</package>
